--- a/paper/main.tex
+++ b/paper/main.tex
@@ -47,15 +47,57 @@
 
 \section{KFAC for PINNs}
 
-\subsection{The Laplacian's Computation Graph}
-We restrict the discussion to feed-forward sequential neural networks.
+We restrict ourselves to feed-forward sequential NNs whose parameters are all in linear layers.
+To derive a Kronecker-factored approximation of the Gramian, we first describe how a layer's parameter enters the Laplacian's computation in \Cref{sec:laplacian-computation-graph}.
+This allows for expressing the exact Gramian as a sum over Kronecker-structured terms stemming from the parameter's direct children in the compute graph (\Cref{sec:kronecker-structure-gramian}).
+
+\paragraph{Sequential NNs} Consider a sequential neural network $u_{\vtheta}$ with depth $L$ that consists of layers $f^{(i)}_{\vtheta^{(i)}}$ with trainable parameters $\vtheta^{(i)} \in \sR^{d^{(i)}}, i=1,\dots, L,$ that transform an input $\vx \in \sR^M$ into a prediction $u_{\vtheta}(\vx)\in \sR^C$ via intermediate representations $\vz^{(i)} \in \sR^{h^{(i)}}, i= 0, \dots, L$,
+\begin{align}
+  \begin{split}
+    u_{\vtheta}
+    &=
+      f^{(L)}_{\vtheta^{(L)}} \circ f^{(L-1)}_{\vtheta^{(L-1)}} \circ \ldots \circ f^{(1)}_{\vtheta^{(1)}}
+    \\
+    f^{(i)}_{\vtheta^{(i)}}\colon \sR^{h^{(i-1)}}
+    &\to
+      \sR^{h^{(i)}}\,,
+    \\
+    \vz^{(i-1)}
+    &\mapsto
+      \vz^{(i)} = f^{(i)}_{\vtheta^{(i)}}(\vz^{(i-1)})
+  \end{split}
+\end{align}
+where $\vz^{(0)} \coloneqq \vx$, $\vz^{(L)} \coloneqq \vu$, and $\vtheta = ({\vtheta^{(1)}}^{\top}, \dots, {\vtheta^{(L)}}^{\top})^{\top}$ is the concatenation of parameters over layers.
+A parameter might be empty, e.g.\,if the layer is an activation layer.
+
+\paragraph{Flattening} Above, we assumed all quantities ($\vz^{(i)}, \vtheta^{(i)}$) to be vectors.
+In case of tensor-valued quantities, we can first flatten them into vectors to reduce to the vector case.
+Our index convention to vectorize will be first-varies-fastest, which means column-stacking for a matrix (row index varies first, column index varies second).
+We denote the flattening operation by $\flatten(\cdot)$.
+Very useful is the so called \emph{vec-trick} stating that
+\begin{equation}\label{eq:vecTrick}
+  \flatten(AXB) = (B^\top\otimes A)\flatten{X}
+\end{equation}
+for matrices $A, X, B$. In particular, this shows that $B^\top\otimes A$ is the  matrix representing the linear mapping $X\mapsto AXB$ and hence $J_X(AXB) = B^\top\otimes A$.
+
+\paragraph{Jacobian \& Hessian} The flattening notation allows to reduce derivatives of matrix/tensor-valued objects back to the matrix case.
+Consider the Jacobian $\jac_{\va}\vb$ of a vector $\vb$ w.r.t.\,a vector $\va$.
+It collects all partial derivatives as $[\mJ_{\va}\vb]_{i,j} = \nicefrac{\partial [\vb]_i}{\partial [\va]_j}$.
+For the Jacobian $\jac_{\mA}\mB$ of a matrix $\mB$ w.r.t.\,a matrix $\mA$, we simply have $\jac_{\mA} \mB = \jac_{\flatten( \mA )}\flatten(\mB)$.
+Likewise, the Hessian $\gradsquared{\va}b$ of a scalar $b$ w.r.t.\,a vector $\va$ collects the second-order partial derivatives according to $[\gradsquared{\va}b]_{i,j} = \nicefrac{\partial^2 b}{\partial [\va]_i \partial [\va]_j}$.
+For the Hessian $\gradsquared{\mA} b$ of a scalar $b$ w.r.t.\,a matrix $\mA$, we simply have $\gradsquared{\mA} b = \gradsquared{\flatten(\mA)}b$.
+We also have $\grad{\mA} b = \grad{\flatten(\mA)} b$ for the gradient of a scalar w.r.t.\,a matrix.
+
+\subsection{The Laplacian's Computation Graph}\label{sec:laplacian-computation-graph}
 \input{sections/laplacian_feedforward_nn.tex}
 
-\subsection{Kronecker Structure of the Gramian}
+\subsection{Kronecker Structure of the Gramian}\label{sec:kronecker-structure-gramian}
 
 This subsection describes the Jacobians of the operations with the weight matrix in
 a linear layer during the computation of the Laplacian and ends by providing an
 equation for the Gramian block.
+
+\toodoo{Propose ways to Kronecker-approximate the terms from identical children in to a single Kronecker product.}
 
 \subsection{Kroneckerfactored Approximate Gramian (KFAG)}
 
@@ -107,7 +149,7 @@ Ideas:
 \end{itemize}
 
 \begin{ack} % automatically suppressed in anonymized submission
-  Acknowledgments go here.
+  The authors thank Runa Eschenhagen for insightful discussions on the relation to KFAC for weight sharing layers.
 \end{ack}
 
 \bibliography{references}
