[ADD] Table of Kronecker approximations w/o weight sharing/transposing

--- a/paper/preamble/custom.tex
+++ b/paper/preamble/custom.tex
@@ -48,6 +48,13 @@
   urlcolor = secondcolor,%
 }%
 
+% ===================================================================
+% SPECIAL SYMBOLS
+% ===================================================================
+\usepackage{pifont} % for check and cross marks
+% commands from https://tex.stackexchange.com/a/42620
+\newcommand{\cmark}{\ding{51}}
+\newcommand{\xmark}{\ding{55}}
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "../main"
