[ADD] Kronecker approximation for `W^T X W`

--- a/paper/sections/kroneckerfactored_approximate_gramian.tex
+++ b/paper/sections/kroneckerfactored_approximate_gramian.tex
@@ -94,7 +94,18 @@ It should also justify that the approximation is similar to that in other works.
         \mX \mX^{\top}
         $
       \\
-
+      New
+      &
+        $\mX \in \mathrm{Sym}(D_1)$
+      &
+        $\mZ = \mW^{\top} \mX \mW \in \mathrm{Sym}(D_2)$
+      &
+        $\grad{\mZ}\ell \in \sR^{D_2^2}$
+      &
+        $\mI \otimes \mW^{\top} \mX + \mK \left( \mI \otimes \mW^{\top} \mX^{\top} \right)$
+        &
+          $\frac{4}{D_2} \flatten^{-1}(\grad{\mZ}\ell) {\flatten^{-1}(\grad{\mZ}\ell)}^{\top} \otimes \mX \mW \mW^{\top} \mX$
+      \\
       \bottomrule
     \end{tabular}
   }
