[TEX] Propose Kronecker approximation for the Gramian, describe intuition (#14)
* [ADD] First attempt to derive a Kronecker approximation of the Gramian

* [ADD] Try providing intuition which terms enter which Kronecker factor

* [ADD] Describe Kronecker approximation for (transpose) matmuls w/o weight sharing

* [ADD] Table of Kronecker approximations w/o weight sharing/transposing

* [ADD] Kronecker approximation for `W^T X W`

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -97,12 +97,8 @@ This subsection describes the Jacobians of the operations with the weight matrix
 a linear layer during the computation of the Laplacian and ends by providing an
 equation for the Gramian block.
 
-\toodoo{Propose ways to Kronecker-approximate the terms from identical children in to a single Kronecker product.}
-
 \subsection{Kroneckerfactored Approximate Gramian (KFAG)}
-
-This subsection describes the Kronecker approximation we propose for the per-layer Gramian.
-It should also justify that the approximation is similar to that in other works.
+\input{sections/kroneckerfactored_approximate_gramian.tex}
 
 \section{Generalization to other PDEs}
 
